# expo-push-notification-api-rust

./: .env.dist  .vercelignore  Cargo.toml  README.md  send_push_notification_to_all.sh  send_push_notification_to_partner.sh  vercel.json
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.github/workflows/: check-and-test.yml  deploy.yml  vercel-deploy.yml
api/: handler.rs
