[package]
name = "expo-push-notification-api-rust"
authors = ["katayama8000 <tattu.0310@gmail.com>"]
version = "0.3.2"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["macros"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }
vercel_runtime = { version = "1.1.6" }
expo_push_notification_client = { version = "1.0.8", default-features = false, features = ["rustls-tls"] }
supabase_rs = "0.4.16"
dotenv = "0.15.0"
tracing = "0.1.41"

[[bin]]
name = "handler"
path = "api/handler.rs"
